# HomeTavern

./: .gitignore  LICENSE  README.md  llama-cpp-setup.md  package-lock.json  package.json  start.bat  start.sh
client/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
client/src/: App.tsx  index.css  main.tsx
client/src/constants/: storage.ts
client/src/contexts/: AuthContext.tsx  EcoModeContext.tsx
client/src/hooks/: useAuth.ts  useCompression.ts  useContextStats.ts
client/src/pages/: CharactersPage.tsx  ChatPage.tsx  HeroPage.tsx  HomePage.tsx  LoginPage.tsx  RegisterPage.tsx  SettingsPage.tsx  SystemPromptsPage.tsx
docs/: hometavern_old_README.md
llm-client/: ARCHITECTURE.md  INSTALLATION.md  README.md
llm-client/nodejs/: package-lock.json  package.json  test.ts
plans/: architecture.md  chat-improvements.md  chat-stats-panel.md  markdown-chat-improvement.md  smart-history-compression.md  system-prompts-architecture.md
server/: .env.example  package-lock.json  package.json
server/src/: index.ts
translation-library/: ARCHITECTURE.md  README.md  SILLYTAVERN_ANALYSIS.md
translation-library/nodejs/: README.md  package-lock.json  package.json  test-translation.ts  tsconfig.json
translation-library/python/: README.md  pyproject.toml  test-libretranslate-debug.py  test-libretranslate-direct.py  test-translation.py
translation-library/python/examples/: async_usage.py  basic_usage.py
translation-library/python/src/translation_library/: __init__.py  chunker.py  cli.py  core.py  types.py
translation-library/python/src/translation_library.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
translation-library/python/src/translation_library/translators/: base.py  google.py  libretranslate.py  yandex.py
(+73 files in other folders)
